--- a/poorly_coded_store/templates/store/checkout.html
+++ b/poorly_coded_store/templates/store/checkout.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    {% load static %}  
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
     <title>Amadon</title>
 </head>
 <body>
-    <h3>Thank you for your business!</h3>
-    <p>We charged your credit card for $</p>
-    <p>You have ordered # items so far and spent $$ with Amadon.com!</p>
-    <p><a href="/">Go Back</a></p>
+    <div class="wrapper">
+        <div class="contaner">
+            <div class="row mt-5">
+                <div class="col-sm-12">
+                    <h3>Thank you for your business!</h3>
+                    <p>We charged your credit card for $ {{charge}}</p>
+                    <p>You have ordered {{num}} items so far and spent ${{total}} with Amadon.com!</p>
+                    <p></p><a href="/">Go Back</a></p>
+                </div>
+            </div>
+        </div>  
+    </div> 
 </body>
 </html>
